src/test/ui/autoderef-full-lval.stderr
error[E0369]: cannot add `Box<isize>` to `Box<isize>`
  --> $DIR/autoderef-full-lval.rs:15:24
   |
LL |     let z: isize = a.x + b.y;
   |                    --- ^ --- Box<isize>
   |                    |
   |                    Box<isize>

error[E0369]: cannot add `Box<isize>` to `Box<isize>`
  --> $DIR/autoderef-full-lval.rs:21:33
   |
LL |     let answer: isize = forty.a + two.a;
   |                         ------- ^ ----- Box<isize>
   |                         |
   |                         Box<isize>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0369`.
